# kagent

./: .gitignore  .golangci.yml  AGENTS.md  BUILD_VERIFICATION_REPORT.md  CHANGELOG_SAP_AI_CORE.md  CLAUDE.md  CODEOWNERS  COMPACTION_IMPLEMENTATION.md  CONTRIBUTING.md  CONTRIBUTION.md  DESIGN_1444.md  DEVELOPMENT.md  FEATURE_MATRIX.md  GO_WORKSPACE_QUESTIONS.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  KAGENT_RESOURCES_COMPARISON.md  MCP_SESSION_CLEANUP_WARNINGS_ANALYSIS.md  MCP_TOOLSET_CLEANUP_SOLUTION.md  MCP_TOOLSET_REPLACEMENT_ERROR_ANALYSIS.md  MCP_TOOLSET_REQUEST_CONSTRUCTION.md  MODEL_CONFIG_FLOW.md  MODEL_CONFIG_FLOW_SIMPLE.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PR_DESCRIPTION.md  README.md  REQUEST_PATH_DIAGRAM.md  SAP_AI_CORE_INTEGRATION.md  SAP_AI_CORE_INTEGRATION_SUMMARY.md  SAP_AI_CORE_QUICKSTART.md  SECURITY.md  STYLE.md  SUBSTRATE_DURABLE_DIR_SESSION_PLAN.md  SUBSTRATE_PYTHON_BYO_PLAN.md  THREAT_MODEL.md  TOOLS_CHART_FIX.md  docker-bake.hcl  init.sh  metadata_plan.md  (+6 more)
.devcontainer/: Dockerfile  (+2 more)
go/test/e2e/agents/remote-kebab/: Dockerfile  agent.py  pyproject.toml
python/: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.full  Makefile  README.md  checkpoints.sqlite  dependency-tree.txt  out.json  pyproject.toml  pyrightconfig.json  skills-agent.yaml
python/agents/: helm_agent.json
python/samples/adk/basic/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/adk/basic/basic/: agent-card.json  agent.py
python/samples/ag2/research-report/: Dockerfile  agent-card.json  agent.yaml  main.py  pyproject.toml
python/samples/crewai/peom_flow/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/crewai/poem_flow/: Dockerfile  README.md  pyproject.toml
python/samples/crewai/research-crew/: Dockerfile  README.md  pyproject.toml
python/samples/dapr/: Dockerfile  README.md  agent.yaml
python/samples/dapr/components/: agent-memory.yaml  agent-pubsub.yaml  agent-registry.yaml  agent-runtime.yaml  agent-workflow.yaml  redis.yaml
python/samples/dapr/dapr-agent/: agent-card.json  agent.py  pyproject.toml
python/samples/langgraph/basic/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/langgraph/basic/basic_langgraph/: agent-card.json  agent.py  cli.py
python/samples/langgraph/currency/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/langgraph/currency/currency/: agent-card.json  agent.py  cli.py
python/samples/langgraph/hitl-agent/: Dockerfile  agent.yaml  pyproject.toml
python/samples/langgraph/hitl-agent/hitl_agent/: agent-card.json  agent.py  cli.py
python/samples/langgraph/hitl-tools/: Dockerfile  pyproject.toml
python/samples/langgraph/hitl-tools/hitl_tools/: agent-card.json
python/samples/langgraph/kebab/: Dockerfile  pyproject.toml
python/samples/langgraph/kebab/kebab/: agent-card.json
python/samples/memory/redis-agent-memory-server/: Dockerfile  README.md  mcp-server.yaml  requirements.txt  server.py
python/samples/multitenant-agent-k8s/auto-agent/: README.md  pyproject.toml
python/samples/multitenant-agent-k8s/auto-agent/auto_agent/: __init__.py  agent-card.json  agent.py  cli.py  registry_client.py
python/samples/openai/basic_agent/: Dockerfile  TEST_RESULTS.md  agent.yaml  pyproject.toml  test_agent.py  test_protocol.py
python/samples/openai/basic_agent/basic_agent/: agent-card.json  agent.py
python/samples/openai/skills/: anthropic_skills.py  pyproject.toml
python/scripts/: add_license_headers.py
python/src/autogen-studio/: pyproject.toml
python/src/autogenstudio/datamodel/: db.py
python/src/autogenstudio/gallery/: builder.py
python/src/autogenstudio/sessionmanager/: sessionmanager.py
python/src/autogenstudio/teammanager/: teammanager.py
python/src/autogenstudio/toolservermanager/: toolserver_manager.py
python/src/autogenstudio/validation/: component_test_service.py
python/src/autogenstudio/web/: app.py  deps.py
python/src/autogenstudio/web/auth/: authroutes.py  dependencies.py
python/src/autogenstudio/web/routes/: feedback.py  gallery.py  invoke.py  models.py  runs.py  sessions.py  settingsroute.py  teams.py  tool_servers.py  tools.py  ws.py
python/src/kagent/: cli.py
python/src/kagent/agents/: __init__.py  _society_of_mind_agent.py
python/src/kagent/models/gemini/: __init__.py  _gemini_client.py  _model_info.py
python/src/kagent/models/vertexai/: _anthropic_vertex_client.py  _model_info.py
python/src/kagent/tool_servers/: __init__.py  _ssemcptoolserver.py  _stdiomcptoolserver.py  _streamable_http_mcp_tool_server.py
python/src/kagent/tools/: _utils.py
python/src/kagent/tools/common/: __init__.py  _binary_paths.py  _shell.py
python/src/kagent/tools/docs/: query_documentation.py
python/src/kagent/tools/istio/: __init__.py  _istioambientworkinspect.py
python/src/kagent/tools/k8s/: _generate_resource.py  _prompt_registry.py  _resource_types.py
python/src/kagent/tools/linkerd/: __init__.py  _linkerd.py
python/src/kagent/tools/utils/: tool_gen.py
python/tests/: test_load_agents.py
python/tests/test_converters/: test_event_converter.py
rust/crates/kagent-adk/: Cargo.toml
rust/crates/kagent-adk/examples/byo/: main.rs
rust/crates/kagent-adk/src/: lib.rs  main.rs
rust/crates/kagent-adk/src/a2a/: converter.rs  mod.rs
rust/crates/kagent-adk/src/auth/: mod.rs  token.rs
rust/crates/kagent-adk/src/config/: builder.rs  loader.rs  mod.rs  types.rs
slackbot/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SLACK_SETUP.md  pyproject.toml  slack-app-manifest.yaml
slackbot/config/: permissions.yaml
slackbot/src/kagent_slackbot/: __init__.py  config.py  constants.py  main.py
slackbot/src/kagent_slackbot/auth/: permissions.py  slack_groups.py
slackbot/src/kagent_slackbot/handlers/: actions.py  commands.py  mentions.py  middleware.py
slackbot/src/kagent_slackbot/models/: __init__.py  interrupt.py
slackbot/src/kagent_slackbot/services/: a2a_client.py  agent_discovery.py  agent_router.py
slackbot/src/kagent_slackbot/slack/: formatters.py  validators.py
(+2627 files in other folders)
