[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagent"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "autogen-core>=0.4.9.2,<0.6",
  "autogen-agentchat>=0.4.9.2,<0.6",
  "autogen-ext[magentic-one,anthropic,azure,mcp,ollama,openai]>=0.4.3",
  "openai>=1.72.0",
  "tiktoken>=0.9.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "mcp>=1.6.0",
  "sqlite-vec>=0.1.0",
  "typer>=0.15.2",
  "numpy>=2.2.3",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
  "opentelemetry-instrumentation-openai>=0.38.0",
  "opentelemetry-instrumentation-httpx>=0.51.0",
  "pinecone>=6.0.2",
  "pydantic",
  "pydantic-settings",
  "fastapi[standard]",
  "typer",
  "aiofiles",
  "python-dotenv",
  "websockets",
  "sqlmodel",
  "psycopg",
  "alembic",
  "loguru",
  "pyyaml",
  "html2text",
  "anthropic",
  "ollama>=0.4.7"
]

[project.optional-dependencies]
jupyter-executor = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
]
lint = [
  "ruff>=0.9.2",
]
anthropic = ["anthropic>=0.48"]
langchain = ["langchain_core~= 0.3.3"]
azure = [
    "azure-ai-inference>=1.0.0b7",
    "azure-ai-projects>=1.0.0b8",
    "azure-core",
    "azure-identity",
    "azure-search-documents>=11.4.0",
]
docker = ["docker~=7.0", "asyncio_atexit>=1.0.1"]
ollama = ["ollama>=0.4.7", "tiktoken>=0.9.0"]
openai = ["openai>=1.66.5", "tiktoken>=0.9.0", "aiofiles"]
file-surfer = [
    "autogen-agentchat==0.5.5",
    "magika>=0.6.1rc2",
    "markitdown[all]~=0.1.0a3",
]

llama-cpp = [
    "llama-cpp-python>=0.3.8",
]

#graphrag = ["graphrag>=2.2.1"]

chromadb = ["chromadb>=1.0.0"]
web-surfer = [
    "autogen-agentchat==0.5.5",
    "playwright>=1.48.0",
    "pillow>=11.0.0",
    "magika>=0.6.1rc2",
    "markitdown[all]~=0.1.0a3",
]
magentic-one = [
    "autogen-agentchat>0.5.5",
    "magika>=0.6.1rc2",
    "markitdown[all]~=0.1.0a3",
    "playwright>=1.48.0",
    "pillow>=11.0.0",
]
video-surfer = [
    "autogen-agentchat==0.5.5",
    "opencv-python>=4.5",
    "ffmpeg-python",
    "openai-whisper",
]
diskcache = [
    "diskcache>=5.6.3"
]
redis = [
    "redis>=5.2.1"
]

grpc = [
    "grpcio~=1.70.0",
]
grpcio-tools = [
    "grpcio-tools~=1.70.0",
]
docker-jupyter-executor = [
    "docker~=7.0",
    "asyncio_atexit>=1.0.1",
    "websockets>=15.0.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.16",
]

task-centric-memory = ["chromadb>=1.0.0"]

semantic-kernel-core = [
    "semantic-kernel>=1.17.1",
]

gemini = [
    "google-genai>=1.0.0",
]

semantic-kernel-google = [
    "semantic-kernel[google]>=1.17.1",
]

semantic-kernel-hugging-face = [
    "semantic-kernel[hugging_face]>=1.17.1",
]

semantic-kernel-mistralai = [
    "semantic-kernel[mistralai]>=1.17.1",
]

semantic-kernel-ollama = [
    "semantic-kernel[ollama]>=1.17.1",
]

semantic-kernel-onnx = [
    "semantic-kernel[onnx]>=1.17.1",
]

semantic-kernel-anthropic = [
    "semantic-kernel[anthropic]>=1.17.1",
]

semantic-kernel-pandas = [
    "semantic-kernel[pandas]>=1.17.1",
]

semantic-kernel-aws = [
    "semantic-kernel[aws]>=1.17.1",
]

semantic-kernel-dapr = [
    "semantic-kernel[dapr]>=1.17.1",
]

http-tool = [
    "httpx>=0.27.0",
    "json-schema-to-pydantic>=0.2.0"
]

semantic-kernel-all = [
    "semantic-kernel[google,hugging_face,mistralai,ollama,onnx,anthropic,usearch,pandas,aws,dapr]>=1.17.1",
]

rich = ["rich>=13.9.4"]

mcp = ["mcp>=1.6.0"]
canvas = [
    "unidiff>=0.7.5",
]

[project.scripts]
kagent-engine = "kagent.cli:run"
tool_gen = "kagent.tools.utils.tool_gen:main"

[tool.uv.sources]
autogen-agentchat = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "6fc4f532128971c03ff5355adf8ca5c73c38fd38" }
autogen-ext = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-ext", rev = "6fc4f532128971c03ff5355adf8ca5c73c38fd38" }
autogen-core = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-core", rev = "6fc4f532128971c03ff5355adf8ca5c73c38fd38" }
kagent = { workspace = true }
autogenstudio = { workspace = true }
tool_servers = { workspace = true }

[tool.ruff]
line-length = 120
fix = true
exclude = [
  "notebooks/",
]

target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/kagent", "src/autogenstudio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
