[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagent"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio_atexit>=1.0.1",
    "autogen-agentchat==0.5.5",
    "autogen-agentchat>0.5.5",
    "azure-ai-inference>=1.0.0b7",
    "azure-ai-projects>=1.0.0b8",
    "azure-core",
    "azure-identity",
    "azure-search-documents>=11.4.0",
    "diskcache>=5.6.3",
    "docker~=7.0",
    "ffmpeg-python",
    "google-genai>=1.0.0",
    "grpcio-tools~=1.70.0",
    "grpcio~=1.70.0",
    "httpx>=0.27.0",
    "json-schema-to-pydantic>=0.2.0",
    "llama-cpp-python>=0.3.8",
    "magika>=0.6.1rc2",
    "openai-whisper",
    "opencv-python>=4.5",
    "pillow>=11.0.0",
    "playwright>=1.48.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "semantic-kernel>=1.17.1",
    "unidiff>=0.7.5",
    "websockets>=15.0.1",
    "aiofiles",
    "alembic",
    "anthropic",
    "autogen-agentchat>=0.4.3",
    "autogen-core>=0.4.3",
    "html2text",
    "loguru",
    "mcp>=1.6.0",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
    "openai>=1.72.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-httpx>=0.51.0",
    "opentelemetry-instrumentation-openai>=0.38.0",
    "opentelemetry-sdk>=1.30.0",
    "pinecone>=6.0.2",
    "psycopg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "sqlite-vec>=0.1.0",
    "sqlmodel",
    "tiktoken>=0.9.0",
    "typer",
    "websockets",
    "tiktoken>=0.9.0",
    "docker~=7.0",
    "ollama>=0.4.7",
    "openai>=1.66.5",
]

[project.optional-dependencies]
jupyter-executor = [
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
]
lint = [
  "ruff>=0.9.2",
]

[project.scripts]
kagent-engine = "kagent.cli:run"
tool_gen = "kagent.tools.utils.tool_gen:main"

[tool.uv.sources]
autogen-agentchat = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-agentchat", rev = "6fc4f532128971c03ff5355adf8ca5c73c38fd38" }
autogen-ext = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-ext", rev = "6fc4f532128971c03ff5355adf8ca5c73c38fd38" }
autogen-core = { git = "https://github.com/microsoft/autogen.git", subdirectory = "python/packages/autogen-core", rev = "6fc4f532128971c03ff5355adf8ca5c73c38fd38" }
kagent = { workspace = true }
autogenstudio = { workspace = true }
tool_servers = { workspace = true }

[tool.ruff]
line-length = 120
fix = true
exclude = [
  "notebooks/",
]

target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/kagent", "src/autogenstudio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
