[project]
name = "auto-agent"
version = "0.9.0"
description = "Autonomous AI agent with dynamic tool discovery — Phase 0.9"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagent-langgraph",
    "langgraph>=0.6.5",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "uvicorn>=0.20.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
auto-agent = "auto_agent.cli:main"

[tool.uv.sources]
kagent-langgraph = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_agent*"]
