[project]
name = "skills"
version = "0.1.0"
description = "Basic OpenAI Skills agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagent-openai",
    "openai-agents>=0.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.uv.sources]
kagent-openai = { workspace = true }
