[project]
name = "remote-kebab"
version = "0.1"
description = "Remote kebab agent"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]>=0.3.5",
    "google-adk[a2a]>=1.14.1",
    "click>=8.1.8",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
